  * #10741 Remove History Manager
  * #10744 Preview own uploads
  * #10745 error when hiding notification area icon
  * #10751 Inconsistent notifications behavior in 1.4 nightlies
  * #10773 Failure to store roster notes not reported
  * #10774 AppIndicator should be used for the tray icon on Wayland
  * #10813 Receiving a notification creates exception
  * #10814 Unable to delete custom theme
  * #10815 Improve Security Labels (XEP-0258) feature
  * #10816 AttributeError: PrivateChatControl object has no attribute
  * #10822 Exception when running contact info on a contact that stop sending status updates
  * #10841 HTTPUpload: Error not shown when filesize limit is reached


Gajim 1.3.3 (10 October 2021)

  New

  * Profile: Add NOTE entry

  Changes

  * Port AdHocCommand window to new Assistant
  * Update API JID for search.jabber.network integration
  * Build with Python 3.9
  * Provider list: Remove blabber.im

  Bug fixes

  * #10638 Depend on nbxmpp>=2.0.4 (CVE-2021-41055)
  * #10560 HTTPUpload: Raise FileError if path is not accessible
  * #10558 Fix spell checking
  * #10551 Check for gstreamer GTK plugin for AV support
  * #10545 Jingle: Fix UnboundLocalError for transports variable
  * #10540 Windows: Add GSSAPI dependency
  * #10539 Stop gdbus.exe when running uninstaller
  * #10478 Fix test_gui_interface testsuite
  * #10477 Migration routine for portable installer
  * #10441 Reload CSS after switching dark/light theme
  * #10150 Dead key improvements
  * Fix starting History Manager in standalone mode

Gajim 1.3.2 (24 April 2021)

  New

  * Accounts: Add account switch description

  Changes

  * MessageInput: Remove custom placeholder
  * MessageInput: Add focus borders

  Bug fixes

  * #10010 Only convert domain name to ASCII
  * #10342 UnicodeDecodeError related to avatars
  * #10428 Roster: Handle missing avatar_sha


Gajim 1.3.1 (01 March 2021)

  New

  * Add setting for GSSAPI authentication

  Changes
