@@ -20,7 +20,6 @@ from nbxmpp.structs import StanzaHandler
 from gajim.common import app
 from gajim.common.events import FileRequestError
 from gajim.common.events import FileSendError
-from gajim.common.events import IqErrorReceived
 from gajim.common.helpers import to_user_string
 from gajim.common.file_props import FilesProp
 from gajim.common.modules.base import BaseModule
@@ -73,9 +72,9 @@ class Iq(BaseModule):
                         file_props)
                     raise nbxmpp.NodeProcessed
 
-        app.ged.raise_event(
-            IqErrorReceived(account=self._account,
-                            properties=properties))
+        self._log.error('Received iq error with unknown id: %s',
+                        properties.error)
+
         raise nbxmpp.NodeProcessed
 
     @staticmethod
